# audacity-scripts

./: .gitignore  README.md  export_clips_individually.py  export_tracks_individually.py  pyproject.toml  test_pipe.py
src/audacity_pipe/: __init__.py  commands.py  pipe.py  test.py
